--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -92,7 +92,8 @@ OBJS= \
     obj/bloom.o \
     obj/leveldb.o \
     obj/txdb.o\
-    obj/keccak.o
+    obj/keccak.o \
+    obj/checkpointsync.o
 
 all: maxcoind.exe
 
