--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -109,8 +109,9 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o\
-    obj/keccak.o
+    obj/txdb.o \
+    obj/keccak.o \
+    obj/checkpointsync.o
 
 all: maxcoind.exe
 
