--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -102,8 +102,9 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o\
-    obj/keccak.o
+    obj/txdb.o \
+    obj/keccak.o \
+    obj/checkpointsync.o
 
 ifndef USE_UPNP
 	override USE_UPNP = -
