--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -143,8 +143,9 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o\
-    obj/keccak.o
+    obj/txdb.o \
+    obj/keccak.o \
+    obj/checkpointsync.o
 
 
 all: obj maxcoind
