Expanded documentation of available configuration settings.

--- a/maxcoin-EXAMPLE.conf
+++ b/maxcoin-EXAMPLE.conf
@@ -1,17 +1,88 @@
-# Testnet
-testnet=1
+# MaxCoin Example Config
 
-# Nodes
-addnode=maxexplorer.cloudapp.net
+# maxcoin.conf configuration file. Lines beginning with # are comments.
 
-# Enable RPC
-server=1
-rpcallowip=*
+# When configuring maxcoin via this configuration file, the file must
+# be placed in the following folder with the following name for the 
+# appropriate operating system (note: the folder may be hidden, so it
+# is important to unhide hidden folders):
+#
+#   Linux - /home/<username>/.maxcoin/maxcoin.conf
+#   Windows - C:\Users\<username>\AppData\Roaming\MaxCoin\maxcoin.conf
+#   OSX - /Users/<username>/Library/Application Support/MaxCoin/maxcoin.conf
 
-# RPC information
-rpcuser=maxcoinrpc
-rpcpassword=GUerfinrRFJEI458539WWISD
 
-# Mining
-gen=0
+#
+# Network-related settings:
+#
 
+# Run on the test network instead of the real maxcoin network.
+#testnet=0
+
+# Connect via a SOCKS proxy
+#proxy=127.0.0.1:9050
+
+# Bind to given address and always listen on it. Use [host]:port notation for IPv6.
+#bind=<addr>
+
+# Use as many addnode= settings as you like to connect to specific peers.
+#addnode=dnsseed.maxcoinhub.io:8668
+#addnode=dnsseed.maxcoin.org.uk:8668
+
+# Alternatively use as many connect= settings as you like to connect ONLY to specific peers.
+#connect=dnsseed.maxcoinhub.io:8668
+#connect=dnsseed.maxcoin.org.uk:8668
+
+# Listening mode, enabled by default except when 'connect' is being used.
+#listen=1
+
+# Maximum number of inbound+outbound connections.
+#maxconnections=
+
+
+#
+# JSON-RPC options (for controlling a running Maxcoin-Qt/maxcoind process)
+#
+
+# server=1 tells Maxcoin-Qt to accept JSON-RPC commands.
+#server=0
+
+# On client-side, you add the normal user/password pair to send commands.
+#rpcuser=madmax
+#rpcpassword=DONT_USE_THIS_YOU_WILL_GET_ROBBED_8ak1gI25KFTvjovL3gAM967mies3E=
+
+# By default, only RPC connections from localhost are allowed.  Specify
+# as many rpcallowip= settings as you like to allow connections from
+# other hosts, either as a single IPv4/IPv6 or with a subnet specification.
+#rpcallowip=10.1.1.34
+#rpcallowip=192.168.1.*
+
+# NOTE: opening up the RPC port to hosts outside your local trusted network is 
+# NOT RECOMMENDED, because the rpcpassword is transmitted over the network unencrypted.
+
+# server=1 tells Maxcoin-Qt to accept JSON-RPC commands.
+# it is also read by maxcoind to determine if RPC should be enabled
+#rpcallowip=*
+#rpcallowip=127.0.0.1
+#rpcallowip=10.1.1.34/255.255.255.0
+#rpcallowip=1.2.3.4/24
+#rpcallowip=2001:db8:85a3:0:0:8a2e:370:7334/96
+
+# Listen for RPC connections on this TCP port.
+#rpcport=8080
+
+
+#
+# Miscellaneous options
+#
+
+# Mining is initially disabled.
+#gen=0
+
+# Enable indexing of transactions so that calls to getrawtransaction return values.
+#txindex=0
+
+# Pay an optional transaction fee every time you send maxcoins.  Transactions with fees
+# are more likely than free transactions to be included in generated blocks, so may
+# be validated sooner.
+#paytxfee=0.00
